--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "bootstrap": "^4.1.3",
     "core-js": "^3.4.4",
     "element-ui": "^2.13.0",
+    "jquery": "^3.4.1",
     "moment": "^2.24.0",
+    "popper.js": "^1.14.3",
     "vue": "^2.6.10",
     "vue-router": "^3.1.5"
   },
@@ -30,7 +33,8 @@
   "eslintConfig": {
     "root": true,
     "env": {
-      "node": true
+      "node": true,
+      "jquery": true
     },
     "extends": [
       "plugin:vue/essential",
